--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -33,24 +33,36 @@
         <div class="mb-3 ms-4 me-4">
           <label for="firstName" class="form-label label">First Name</label>
           <input type="text" class="form-control" id="firstName" formControlName="firstName">
+          <span class="help-block text-danger"
+          *ngIf="!signupForm.get('firstName').valid && signupForm.get('firstName').touched"
+          >Please enter your first name.</span>
         </div>
         <div class="mb-3 ms-4 me-4">
           <label for="lastName" class="form-label label">Last Name</label>
           <input type="text" class="form-control" id="lastName" formControlName="lastName">
+          <span class="help-block text-danger"
+          *ngIf="!signupForm.get('lastName').valid && signupForm.get('lastName').touched"
+          >Please enter your last name.</span>
         </div>
         <div class="mb-3 ms-4 me-4">
           <label for="email" class="form-label label">Email</label>
           <input type="email" class="form-control" id="email" formControlName="email">
+          <span class="help-block text-danger"
+          *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched"
+          >Please enter a valid email.</span>
         </div>
         <div class="mb-3 ms-4 me-4">
           <label for="password" class="form-label label">Password</label>
           <input type="password" class="form-control" id="password" formControlName="password">
+          <span class="help-block text-danger"
+          *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched"
+          >Please enter a password.</span>
         </div>
         <div class="d-flex justify-content-end me-3 bottom">
           <div class="mt-2 me-4 account">
             <span class="me-2">Have an account?</span><a class="green login" (click)="hasAccount(true); containerHeight()">Login</a>
           </div>
-          <button class="btn btn-success me-2 submit" type="submit">Submit</button>
+          <button class="btn btn-success me-2 submit" type="submit" [disabled]="!signupForm.valid">Submit</button>
         </div>
       </form>
     </div>
@@ -65,16 +77,22 @@
         <div class="mb-3 ms-4 me-4">
           <label for="email" class="form-label label">Email</label>
           <input type="email" class="form-control" id="email" formControlName="email">
+          <span class="help-block text-danger"
+          *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched"
+          >Please enter your email.</span>
         </div>
         <div class="mb-3 ms-4 me-4">
           <label for="password" class="form-label label">Password</label>
           <input type="password" class="form-control" id="password" formControlName="password">
+          <span class="help-block text-danger"
+          *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched"
+          >Please enter your password.</span>
         </div>
         <div class="d-flex justify-content-end me-3 bottom">
           <div class="mt-2 me-4 account">
             <span class="me-2">Don't have an account?</span><a class="green login" (click)="hasAccount(false); containerHeight()">Sign Up</a>
           </div>
-          <button class="btn btn-success me-2 submit" type="submit">Submit</button>
+          <button class="btn btn-success me-2 submit" type="submit" [disabled]="!loginForm.valid">Submit</button>
         </div>
       </form>
     </div>
