--- a/src/app/tasks-list/task-modal/task-modal.component.css
+++ b/src/app/tasks-list/task-modal/task-modal.component.css
@@ -68,3 +68,7 @@
   transition: background-color .3s, box-shadow .3s, color .3s;
 }
 /* End New Task */
+
+input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
