Added basic functionality for dragging and dropping KanBan tasks

--- a/src/app/kanban/kanban.component.css
+++ b/src/app/kanban/kanban.component.css
@@ -51,19 +51,6 @@ h5 {
   margin-top: 11px;
 }
 
-.grabbable {
-  cursor: move; /* fallback if grab cursor is unsupported */
-  cursor: grab;
-  cursor: -moz-grab;
-  cursor: -webkit-grab;
-}
-
-.grabbable:active {
-  cursor: grabbing;
-  cursor: -moz-grabbing;
-  cursor: -webkit-grabbing;
-}
-
 .task-card:last-child {
   margin-bottom: 11px;
 }
@@ -122,4 +109,18 @@ h5 {
 
 span {
   font-weight: 600;
+}
+
+/* Drag and drop */
+.grabbable {
+  cursor: move; /* fallback if grab cursor is unsupported */
+  cursor: grab;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+}
+
+.grabbable:active {
+  cursor: grabbing;
+  cursor: -moz-grabbing;
+  cursor: -webkit-grabbing;
 }
