Set up and styled bored api page

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,8 +3,11 @@
   <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4"
   routerLinkActive="active"
   routerLink="./tasks-list">Task List</button>
-  <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4 mt-3 mb-auto"
+  <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4 mt-3"
   routerLinkActive="active"
   routerLink="./kanban">KanBan</button>
+  <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4 mt-3 mb-auto"
+  routerLinkActive="active"
+  routerLink="./im-bored">I'm Bored</button>
   <app-user-info-box></app-user-info-box>
 </nav>
