--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -46,14 +46,14 @@
         </div>
         <div class="mb-3 ms-4 me-4">
           <label for="email" class="form-label label">Email</label>
-          <input type="email" class="form-control" id="email" formControlName="email">
+          <input type="email" class="form-control" id="semail" formControlName="email">
           <span class="help-block text-danger"
           *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched"
           >Please enter a valid email.</span>
         </div>
         <div class="mb-3 ms-4 me-4">
           <label for="password" class="form-label label">Password</label>
-          <input type="password" class="form-control" id="password" formControlName="password">
+          <input type="password" class="form-control" id="spassword" formControlName="password">
           <span class="help-block text-danger"
           *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched"
           >Please enter a password.</span>
@@ -76,14 +76,14 @@
         </div>
         <div class="mb-3 ms-4 me-4">
           <label for="email" class="form-label label">Email</label>
-          <input type="email" class="form-control" id="email" formControlName="email">
+          <input type="email" class="form-control" id="lemail" formControlName="email">
           <span class="help-block text-danger"
           *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched"
           >Please enter your email.</span>
         </div>
         <div class="mb-3 ms-4 me-4">
           <label for="password" class="form-label label">Password</label>
-          <input type="password" class="form-control" id="password" formControlName="password">
+          <input type="password" class="form-control" id="lpassword" formControlName="password">
           <span class="help-block text-danger"
           *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched"
           >Please enter your password.</span>
