Store and fetch user data from server

--- a/src/app/sidebar/user-info-box/user-info-box.component.html
+++ b/src/app/sidebar/user-info-box/user-info-box.component.html
@@ -8,7 +8,7 @@
       <div class="email">{{ user.email }}</div>
     </div>
     <div class="col-3 mt-2">
-      <a href="#">
+      <a class="click" (click)="onLogout()">
         <span class="bi material-symbols-outlined ms-sm-2 ms-xl-4 logout">
           move_item
         </span>
