Fixed a bug with sidebar height. Added scrolling to KanBan

--- a/src/app/kanban/kanban.component.html
+++ b/src/app/kanban/kanban.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container page-container mt-5">
   <h1>KanBan</h1>
   <div class="row d-flex justify-content-evenly mt-3 ms-2 me-5">
     <div class="col-xl-4 col-lg-6 col-md-12">
