--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,5 +1,5 @@
-<div class="row" style="height: 100vh; width: 100vw;">
-  <div class="col-sm-3 col-xl-2" id="sidebar">
+<div class="row">
+  <div class="col-sm-3 col-xl-2" style="height: 100vh;">
     <app-sidebar></app-sidebar>
   </div>
   <div class="col-sm-9 col-xl-10">
