--- a/src/app/toast/toast.component.html
+++ b/src/app/toast/toast.component.html
@@ -2,7 +2,7 @@
   <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="d-flex">
       <div class="toast-body ms-2">
-        <span>Task '{{ taskTitle }}' was {{ actionTaken }}.</span>
+        <span>Task '{{ taskTitle }}' {{ actionTaken }}.</span>
       </div>
       <button type="button" class="btn-close btn-close-white me-3 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
