Fixing page change on adding task

--- a/src/app/tasks-list/tasks-list.component.css
+++ b/src/app/tasks-list/tasks-list.component.css
@@ -75,6 +75,10 @@ td.title {
   transition: background-color .3s, box-shadow .3s, color .3s;
 }
 
+tr {
+  height: 42px;
+}
+
 th, td {
   border: none;
 }
