--- a/src/app/tasks-list/tasks-list.component.html
+++ b/src/app/tasks-list/tasks-list.component.html
@@ -75,12 +75,12 @@
         *ngFor="let task of tasks | filterTasks:dueDateFilter:priorityFilter:statusFilter | sortTasks:taskSort:taskSortDir | slice:((pageNum - 1) * 15):((pageNum - 1) * 15 + 15) | generatePages; let i = index;" class="border-bottom" id="a{{task.id}}">
           <ng-container>
             <!-- *ngIf="i >= ((pageNum - 1) * 15) && i < ((pageNum - 1) * 15 + 15)"> -->
-            <td class="title" scope="row">{{ task.title }}</td>
-            <td>{{ task.dueDate }}</td>
-            <td><span
+            <td class="title" scope="row" [@highlightTask]="taskIdToHighlight === task.id ? true : false">{{ task.title }}</td>
+            <td [@highlightTask]="taskIdToHighlight === task.id ? true : false">{{ task.dueDate }}</td>
+            <td [@highlightTask]="taskIdToHighlight === task.id ? true : false"><span
               *ngIf="task.priority !== ''"
               class="bi bi-circle-fill {{ task.priority.toLowerCase() }}">&nbsp;</span>{{ task.priority }}</td>
-            <td>
+            <td [@highlightTask]="taskIdToHighlight === task.id ? true : false">
               <select class="status-dropdown" id="status-change"
               (change)="changeStatus($event.target.value, task.id)"
               *ngIf="task.priority !== ''">
@@ -90,7 +90,7 @@
                 <option value="Done-3">Done</option>
               </select>
             </td>
-            <td>
+            <td [@highlightTask]="taskIdToHighlight === task.id ? true : false">
               <!-- <div class="d-flex justify-content-evenly" -->
               <div
               *ngIf="task.priority !== ''">
